Fix spacing for blue blobs on about page for smaller screen widths

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -153,6 +153,16 @@ h2,
   visibility: hidden;
 }
 
+@media (max-width: 500px) {
+  .blob-top-small {
+    top: 0.8rem;
+  }
+
+  .blob-bot-small {
+    bottom: 0.8rem;
+  }
+}
+
 @media (min-width: 1544px) {
 
   .blob-top-small,
